<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchFragment"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marquelo.getstars.menu_lobby_fragments.search.">


    <Button
        android:id="@+id/btn_category"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_redondeado"
        android:backgroundTint="#1CE6BD"
        android:text="@string/categorias_title"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_featured"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_redondeado"
        android:backgroundTint="#FCA311"
        android:text="@string/destacados_title"
        android:textStyle="bold"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_category" />

    <Button
        android:id="@+id/btn_popular"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_redondeado"
        android:backgroundTint="#1CC9E6"
        android:text="@string/populares_title"
        android:textStyle="bold"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_featured" />

    <Button
        android:id="@+id/btn_news"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_redondeado"
        android:backgroundTint="#A61CE6"
        android:text="@string/novedades_title"
        android:textStyle="bold"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_popular" />

</androidx.constraintlayout.widget.ConstraintLayout>